<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asistencia</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_registrar_ingreso">Registrar Ingreso</string>
    <string name="str_registrar_salida">Registrar Salida</string>
    <string name="str_ver_datos">Ver Datos</string>
    <string name="title_activity_ver">Ver Datos</string>
    <string name="title_activity_toast">Toast</string>
    <string name="str_estado">Estado</string>
    <string name="str_enviar">Enviar al Servidor</string>
    <string name="str_eliminar">Eliminar Datos</string>
    <string name="str_id_programa">Labor</string>
    <string name="str_id_trato">Trato</string>
    <string name="str_inicial">0</string>

</resources>