<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_main_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/lblprograma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_id_programa"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/txt_id_programa"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/str_inicial" />

            <TextView
                android:id="@+id/lblTrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/str_id_trato"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/txtTrato"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/str_inicial" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >
        </TableRow>

    </LinearLayout>

    <Button
        android:id="@+id/btn_capturar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="24dp"
        android:background="#5FB404"
        android:text="@string/str_registrar_ingreso" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_capturar"
        android:layout_below="@+id/btn_capturar"
        android:layout_marginTop="16dp"
        android:background="#5FB404"
        android:text="@string/str_registrar_salida" />

    <Button
        android:id="@+id/btn_ver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_modificar"
        android:layout_centerVertical="true"
        android:background="#5FB404"
        android:text="@string/str_ver_datos" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_ver"
        android:layout_below="@+id/btn_ver"
        android:layout_marginTop="18dp"
        android:background="#EEF763"
        android:text="@string/str_enviar" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_enviar"
        android:layout_below="@+id/btn_enviar"
        android:layout_marginTop="22dp"
        android:background="#FF0000"
        android:text="@string/str_eliminar" />

</RelativeLayout>